--- a/style/main.css
+++ b/style/main.css
@@ -31,6 +31,13 @@ table {
   border: 1px solid black;
 }
 
+.div-edit {
+  background-color: lightcoral;
+  border-radius: 5px;
+  padding: 5px 3px 7px 3px;
+  display: inline;
+}
+
 body {
   background-color: lightyellow;
   align-items: center;
